# ATDL-SoftWeightSharing

./: README.md  hyperparam_letnet.py  main.py  pretrained_lenet_model.pth  pyproject.toml  requirements.txt  setup.py  test_data.py  tut.py
log/: 2025-10-27.md
notebook/: pretrained_lenet_model.pth  sws_experiments.ipynb
scripts/: lenet5caffe_training.py  pretrain.py  retrain.py  retrain_v2.py  test_postprocessing.py  test_pretraining.py  test_training_with_prior.py  tune_optuna.py  tut_script.py  wideresnet_cifar_training.py
src/: __init__.py  base_model.py  compression_utils.py  data.py  dataset.py  pretrain_and_compress.py  retraining.py  retraining_draft.py  sws_compressor.py  util.py
src/.qwen/: PROJECT_SUMMARY.md
src/atdl_sws/: __init__.py  base_model.py  csv_logger.py  data.py  metrics.py  prior.py  retraining.py  retraining_draft.py  util.py  visualizing.py
src/atdl_sws/models/: __init__.py  lenet_300.py  lenet_caffe.py  resnet.py
src/models/: __init__.py  lenet.py  resnet.py  utils.py
src/src/ATDLSoftWeightSharing/: __init__.py  data.py  dataset.py  extended_keras.py  helpers.py  main.py  models.py  optimizers.py  prior.py  tutorial.py
src/tutorial_softweightsharingfornncompression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py
