[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atdl-swss"
version = "0.2.0"
description = "Soft weight sharing techniques for neural networks using Keras/TensorFlow"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "tensorflow>=2.20.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "imageio>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
managed = true
