[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atdl_sws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "matplotlib>=3.10.7",
    "tensorflow>=2.20.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "imageio>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
managed = true
